--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -1,11 +1,11 @@
 # Compiler
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+#CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 NAME = replace
 
 SRC = main.cpp \
-	replace.cpp
+	Harl.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
