--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -1,6 +1,5 @@
-# Compiler
 CXX = c++
-#CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 NAME = replace
 
