--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,6 +1,5 @@
-# Compiler
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -g
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 NAME = zombie
 
