--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,10 +1,9 @@
-# Compiler
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 NAME = zombie
 
-SRC = main.cpp \
+SRC = main.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
