--- a/ex06/Makefile
+++ b/ex06/Makefile
@@ -1,12 +1,10 @@
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-NAME = fight
+NAME = harlFilter
 
 SRC = main.cpp \
-	HumanA.cpp \
-	HumanB.cpp \
-	Weapon.cpp
+	Harl.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
